--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-scripts",
+  "name": "foloinfo-react-scripts",
   "version": "1.1.0",
-  "description": "Configuration and scripts for Create React App.",
-  "repository": "facebook/create-react-app",
+  "description": "foloinfo Configuration and scripts for Create React App.",
+  "repository": "foloinfo/create-react-app",
   "license": "MIT",
   "engines": {
     "node": ">=6"
